--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <style type="text/css">
-      html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
-    </style>
-    <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEdiiKwAt4DrkeEOrl75IIEYY1kRaC_Nw">
-    </script>
-    <script type="text/javascript">
-      function initialize() {
-        var mapOptions = {
-          center: { lat: -34.397, lng: 150.644},
-          zoom: 9
-        };
-        var map = new google.maps.Map(document.getElementById('map-canvas'),
-            mapOptions);
-      }
-      google.maps.event.addDomListener(window, 'load', initialize);
-    </script>
-  </head>
-  <body>
-<div id="map-canvas"></div>
-  </body>
-</html>
+	<html>
+		<body>
+			<table border="1" style="width:100%">
+				<tr style="width:50%">
+					<td style="width:50%">
+						<center><a href="https://stat.tamu.edu/">Statistics Dept.</a></center>
+					</td>
+					<td style="width:50%">
+						<center><img src="https://images.squarespace-cdn.com/content/v1/5f9357a259730001e3ba5d30/1607461743782-EBH339FBJTA7W3Q7VI7S/61564255_2087524664703916_3873271017283518464_n%2B%25281%2529.jpg?format=2500w" alt="Picture of me"
+						width="240" height="160"></center>
+					</td>
+				</tr>
+				<tr style="width:50%">
+					<td style="width:50%">
+						<ul>
+							<li>In 2012, I graduated from CUNY Hunter with a bachelor's degree in political science.</li>
+							<li>Stat 604 is my first course in the MS Statistical Data Science program and my first course since graduating from college.</li>
+						</ul>
+					</td>
+					<td style="width:50%"></td>
+				</tr>
+			</table>
+		</body>
+	</html>
